# opengloss-rs

./: .gitignore  Cargo.toml  README.md  RELEASING.md  TODO.md  build.rs  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.3.5.md  release-notes-v0.3.6.md  release-notes-v0.3.9.md  release-notes-v0.4.0.md
benches/: lexeme.rs
notes/: release-notes-v0.3.3.md  release-notes-v0.3.4.md  release-notes-v0.3.7.md  release-notes-v0.3.8.md  release-notes-v0.4.1.md  release-notes-v0.4.2.md  release-notes-v0.4.3.md
scripts/: export_lexemes.py  package_release.sh
src/: cli.rs  data.rs  lib.rs  main.rs  telemetry.rs  web.rs
