[package]
name = "opengloss-rs"
version = "0.1.0"
edition = "2024"
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]

[dependencies]
fst = "0.4.7"
once_cell = "1.19.0"
clap = { version = "4.5.13", features = ["derive"], optional = true }
serde_json = { version = "1.0.118", optional = true }
rkyv = "0.8.12"
zstd = "0.13.3"
termimad = { version = "0.28.0", optional = true }
atty = { version = "0.2.14", optional = true }

[build-dependencies]
fst = "0.4.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.118"
rkyv = "0.8.12"
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["cli"]
cli = ["clap", "serde_json", "termimad", "atty"]

[[bench]]
name = "lexeme"
harness = false
